Este es mi primer commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
 	<title>TP SASS</title>
 </head>
 <body>
@@ -12,7 +11,7 @@
 		<img src="images/hf.jpg">
 		<nav>
 			<ul>
-				<li> <a href="seccionprueba.html">Seccion prueba sass</a></li>
+				<li>LINK</li>
 				<li>LINK</li>
 				<li>LINK</li>
 				<li>LINK</li>
@@ -24,7 +23,7 @@
 		<section class="nosotros">
 			<div class="info">
 				<h1>NOSOTROS</h1>
-				<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Illum nisi repellendus assumenda delectus magnam porro accusamus ducimus similique! Eum voluptates architecto earum sit similique, itaque neque, magni tempore quod doloribus! lorem</p>
+				<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Illum nisi repellendus assumenda delectus magnam porro accusamus ducimus similique! Eum voluptates architecto earum sit similique, itaque neque, magni tempore quod doloribus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore illo fuga! Animi officiis atque temporibus, quasi praesentium nemo, vero expedita deleniti in, dolorum tempore? Aut soluta inventore, aliquam fugit.</p>
 
 			</div>
 			<div class="visual">
