--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="info">
 				<h1>QUE HACEMOS</h1>
-				<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Illum nisi repellendus assumenda delectus magnam porro accusamus ducimus similique! Eum voluptates architecto earum sit similique, itaque neque, magni tempore quod doloribus!</p>
+				<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Illum nisi repellendus assumenda delectus magnam porro accusamus ducimus similique! Eum voluptates architecto earum sit similique, itaque neque, magni tempore quod doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ab deleniti aliquam nesciunt maxime nam illo molestias corrupti, sapiente corporis sequi magnam unde facere error quia doloremque! Voluptates voluptas, dicta?</p>
 
 			</div>
 			
